issues with top nav not fitting the title so i didn't put it on all the pages.

--- a/src/app/pages/home/my-pets/my-pets.page.scss
+++ b/src/app/pages/home/my-pets/my-pets.page.scss
@@ -2,7 +2,3 @@
     display: flex;
     justify-content: center;
   }
-  .noMar{
-    margin: 0px !important;
-    padding-top: 5px;
-  }
