--- a/src/global.scss
+++ b/src/global.scss
@@ -37,3 +37,15 @@
     display: flex;
     justify-content: flex-end;
 }
+.navTitle{
+    margin: 0px !important;
+    padding-top: 5px;
+    font-size: 28px;
+}
+.smolbtn{
+    width:35px !important;
+    height: 35px !important;
+}
+.backArrow{
+    font-size: 28px;
+}
